# vfox.rs

./: .gitignore  .gitmodules  .luarc.json  .mise.toml  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dagger.json  mise.toml
.fluentci/: dagger.json
.fluentci/plugin/: Cargo.toml
.fluentci/plugin/src/: helpers.rs  lib.rs
.fluentci/src/dagger/: index.ts  jobs.ts
.github/: renovate.json
.github/workflows/: release-plz.yml  test.yml  tests.yml
lua/: html.lua
mise/tasks/: release-plz
plugins/vfox-dummy/lib/: util.lua
plugins/vfox-nodejs/.github/workflows/: publish.yaml
src/: bin.rs  config.rs  context.rs  error.rs  lib.rs  metadata.rs  plugin.rs  registry.rs  runtime.rs  sdk_info.rs  vfox.rs
src/cli/: available.rs  install.rs  mod.rs
src/hooks/: available.rs  backend_exec_env.rs  backend_install.rs  backend_list_versions.rs  backend_uninstall.rs  env_keys.rs  mise_env.rs  mise_path.rs  mod.rs  parse_legacy_file.rs  post_install.rs  pre_install.rs  pre_use.rs
src/lua_mod/: archiver.rs  file.rs  hooks.rs  html.rs  http.rs  json.rs  mod.rs  strings.rs
src/snapshots/: vfox__vfox__tests__metadata.snap
test/data/: sample.html
tests/: available_test.rs
