[package]
name = "vfox"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
description = "Interface to vfox plugins"
documentation = "https://docs.rs/vfox"
homepage = "https://github.com/jdx/vfox.rs"
repository = "https://github.com/jdx/vfox.rs"

[lib]
name = "vfox"
path = "src/lib.rs"

[[bin]]
name = "vfox-cli"
path = "src/bin.rs"

[dependencies]
homedir = "0.2.1"
mlua = { version = "0.9", features = ["async", "lua54", "macros", "serialize", "vendored"] }
once_cell = "1"
reqwest = { version = "0.12", features = [] }
scraper = "0.19.0"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "fs"] }
xx = { version = "0.4", features = ["archive"] }

[dev-dependencies]
insta = "1"
#pretty_assertions = "1.4.0"

[workspace.metadata.release]
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
